navigation responsive fix - logo header remove on small sizes & hero background attachment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,15 @@ body {
     overflow-x: hidden;
 }
 
+.shadow {
+    -webkit-box-shadow: 3px 3px 5px 6px #000;
+    /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+    -moz-box-shadow: 3px 3px 5px 6px #000;
+    /* Firefox 3.5 - 3.6 */
+    box-shadow: 3px 3px 5px 6px #000;
+    /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+}
+
 /*
 Write Comments DUDE :)
 */
@@ -34,7 +43,8 @@ h1.logo_heading {
 }
 
 nav {
-    right: 100px;
+    display: flex;
+    /* right: 100px; */
 }
 
 nav a {
@@ -66,10 +76,16 @@ Sticky nav
     border-bottom: none;
 }
 
+@media only screen and (max-width:685px) {
+    .logo_heading {
+        display: none;
+    }
+}
+
 @media only screen and (max-width:800px) {
 
     .general-style {
-        padding-top: 100px;
+        padding-top: 50px;
         /* height: auto !important; */
     }
 
@@ -77,12 +93,13 @@ Sticky nav
         font-size: 35px !important;
     }
 
+    /* 
     .navigation__wrapper {
         flex-direction: column;
-    }
+    } */
 
     .hero {
-        transform: translateY(100px);
+        transform: translateY(25px);
     }
 
     .hero__title {
@@ -134,6 +151,8 @@ Sticky nav
 #branding img {
     max-width: 95px;
     height: auto;
+    min-width: 60px;
+    margin-left: 5px;
 }
 
 .main-nav-scrolled {
@@ -209,6 +228,10 @@ header {
     .general-style p {
         font-size: 22px !important;
     }
+
+    nav a {
+        font-size: 19px !important;
+    }
 }
 
 header .container {
@@ -261,6 +284,7 @@ header nav {
     z-index: 9999999;
     background-size: cover;
     background-position: center right;
+    background-attachment: fixed;
     font-family: 'Sail', cursive;
     /* margin-bottom: 0.5em; */
 }
